--- a/views/obra/atividade_itens.html
+++ b/views/obra/atividade_itens.html
@@ -20,7 +20,7 @@
             <div class="panel-body">
                 <div class="right">
                     {{=gridItens[1].custom.submit}}
-                    {{=voltar1('atividades_itens')}}
+                    {{=voltar1('atividadesitens')}}
                     {{if gridItens.update_form:}}
                         {{=excluir('#')}}
                     {{pass}}
