--- a/views/obra/composicaoCadastro.html
+++ b/views/obra/composicaoCadastro.html
@@ -23,11 +23,11 @@
                                 </div>
                                 <div class="col-md-2">
                                     <label>Mão de Obra:</label>
-                                    <h4><strong>{{=valorMaodeObra}}</strong></h4>
+                                    <h4><strong>{{=vlMaodeObra}}</strong></h4>
                                 </div>
                                 <div class="col-md-2">
                                     <label>Valor:</label>
-                                    <h4><strong>{{=valorComposicao}}</strong></h4>
+                                    <h4><strong>{{=vlComposicao}}</strong></h4>
 
                                 </div>
                             </div>
