--- a/views/obra/obra.html
+++ b/views/obra/obra.html
@@ -40,7 +40,7 @@
                     {{=loadAtividade}}
                 </div>
                 <div id="menu2" class="tab-pane fade">
-                    
+                    {{=loadOrcamento}}
                 </div>
                 <div id="menu3" class="tab-pane fade">
                     
