--- a/views/obra/obra_orcamento.html
+++ b/views/obra/obra_orcamento.html
@@ -15,8 +15,12 @@
     </div>
     {{=form_pesq.custom.end}}
 </div>
-
 <div class="well">
+    <div style="text-align: center">
+        <h3>{{=legenda}}</h3>
+        <h2>{{=totalOrcamento}}</h2>
+    </div>
+
     <table class="table tree-2 table-bordered table-striped table-condensed">
         <thead>
             <tr>
