--- a/views/obra/obra.html
+++ b/views/obra/obra.html
@@ -22,9 +22,13 @@
                                 {{=formObra.custom.label.demanda}}
                                 {{=formObra.custom.widget.demanda}}
                             </div>                            
-                            <div class="col-md-10">
+                            <div class="col-md-8">
                                 {{=formObra.custom.label.descricao}}
                                 {{=formObra.custom.widget.descricao}}
+                            </div>
+                            <div class="col-md-2">
+                                {{=formObra.custom.label.bdi}}
+                                {{=formObra.custom.widget.bdi}}
                             </div>
                         </div>
                     </div>
