--- a/views/receber/receber.html
+++ b/views/receber/receber.html
@@ -20,6 +20,7 @@
             <div id="menu2" class="tab-pane fade">
                 {{=formCheques}}
             </div>
+            </div>
             <div class="panel panel-info">
                 <div class="panel-body">
                     <div class="right">
