--- a/views/receber/recebimentos.html
+++ b/views/receber/recebimentos.html
@@ -2,6 +2,9 @@
 
 <script type="text/javascript">
 jQuery(function($){
-   $("#recebimentos_dtpagamento").mask('99/99/9999'); 
+   $("#recebimentos_dtpagamento").css('width', '150px').mask('99/99/9999'); 
+   $("#recebimentos_conta").css('width', '150px'); 
+   $("#recebimentos_vlrecebimento").css('width', '150px');
 });  
 </script>
+
