--- a/views/pagar/pagamentos.html
+++ b/views/pagar/pagamentos.html
@@ -5,5 +5,7 @@ jQuery(function($){
    $("#pagamentos_dtpagamento").css('width', '150px').mask('99/99/9999'); 
    $("#pagamentos_conta").css('width', '150px'); 
    $("#pagamentos_vlpagamento").css('width', '150px');
+   $("#pagamentos_juros").css('width', '150px');
+   $("#pagamentos_desconto").css('width', '150px');
 });  
 </script>
