--- a/views/pagar/pagamentosCheques.html
+++ b/views/pagar/pagamentosCheques.html
@@ -1,6 +1,4 @@
 <div class="well">
-    {{=gridCheques}}
-    <pre>Total de Cheques : <b>{{=total_cheques}}</b>    Total de Pagamentos : <b>{{=session.total_pagamentos}}</b></pre>
     <div class="row">
         <p></p>
         {{=form_pesq.custom.begin}}
@@ -13,4 +11,6 @@
         </div>
         {{=form_pesq.custom.end}}
     </div><!-- /.row -->
+    {{=gridCheques}}
+    <pre>Total de Cheques : <b>{{=total_cheques}}</b></pre>
 </div><!-- /.well -->
