--- a/views/receber/receber_receitas.html
+++ b/views/receber/receber_receitas.html
@@ -6,7 +6,6 @@
                 {{=formReceitas[1].custom.label.receita}}
                 {{=formReceitas[1].custom.widget.receita}}
             </div>
-
             <div class="col-md-3">
                 {{=formReceitas[1].custom.label.dtreceita}}
                 {{=formReceitas[1].custom.widget.dtreceita}}
@@ -16,13 +15,15 @@
                 {{=formReceitas[1].custom.widget.valor}}
             </div>
         </div>
-    </div>
-    <div class="panel panel-info">
-        <div class="panel-body">
-            <div class="right">
-                {{=formReceitas[1].custom.submit}}
-                {{=btnVoltar}}
-                {{=btnExcluir}}
+        <div class="row">
+            <div class="panel panel-info">
+                <div class="panel-body">
+                    <div class="right">
+                        {{=formReceitas[1].custom.submit}}
+                        {{=btnVoltar}}
+                        {{=btnExcluir}}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
