--- a/views/financeiro/conta_lancamento.html
+++ b/views/financeiro/conta_lancamento.html
@@ -5,5 +5,7 @@ jQuery(function($){
    $("#conta_corrente_dtpagamento").css('width', '200px');
    $("#conta_corrente_vlrecebimento").css('width', '200px');
    $("#conta_corrente_vlpagamento").css('width', '200px');
+   $("#conta_corrente_desconto").css('width', '200px');
+   $("#conta_corrente_juros").css('width', '200px');
 });  
 </script> 
