--- a/views/pagar/compra.html
+++ b/views/pagar/compra.html
@@ -38,8 +38,8 @@
                                 {{=formCompra.custom.widget.condicao}}
                             </div>
                             <div class="col-md-4">
-                                {{=formCompra.custom.label.obra}}
-                                {{=formCompra.custom.widget.obra}}
+                                {{=formCompra.custom.label.demanda}}
+                                {{=formCompra.custom.widget.demanda}}
                             </div>
                             <div class="col-md-4">
                                 {{=formCompra.custom.label.tipo}}
