--- a/views/cadastro/demandaInsumos.html
+++ b/views/cadastro/demandaInsumos.html
@@ -15,12 +15,12 @@
         </div>
     </div>
     {{=form_pesq.custom.end}}
-    {{=despesas}}
+    {{=insumos}}
 </div>
 
 <script>
 $(document).ready(function(){
-    $('#demandadespesas').DataTable({
+    $('#demandainsumos').DataTable({
         select: true,
         paging: false,
         scrollY: 300,
