--- a/views/pagar/entrada.html
+++ b/views/pagar/entrada.html
@@ -35,16 +35,20 @@
                         </div>
                         <div class="row">
                             <p></p>
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 {{=form_pagar.custom.label.demanda}}
                                 {{=form_pagar.custom.widget.demanda}}
+                            </div>
+                            <div class="col-md-3">
+                                {{=form_pagar.custom.label.tipo}}
+                                {{=form_pagar.custom.widget.tipo}}
                             </div>
 
                             <div class="col-md-3">
                                 {{=form_pagar.custom.label.condicao}}
                                 {{=form_pagar.custom.widget.condicao}}
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-2">
                                 {{=form_pagar.custom.label.valor}}
                                 {{=form_pagar.custom.widget.valor}}
                             </div>
