--- a/views/web2py_ajax.html
+++ b/views/web2py_ajax.html
@@ -23,6 +23,7 @@ response.files.append(URL('static','datatable/css/jquery.dataTables.min.css'))
 response.files.append(URL('static','treegrid/css/jquery.treegrid.css'))
 response.files.append(URL('static','treegrid/js/jquery.treegrid.js'))
 response.files.append(URL('static','treegrid/js/jquery.treegrid.bootstrap3.js'))
+response.files.append(URL('static','css/sidebar_menu.css'))
 
 response.include_meta()
 response.include_files()
